--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </div>
 
 
-  <footer>
+  <!-- <footer>
     Made with ❤️ in London.
-  </footer>
+  </footer> -->
 
   
   <script src="index.js" charset="utf-8"></script>
